best-practices/disallow_latest_tag/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow_latest_tag.yaml
assert:
- policy-assert.yaml
