best-practices/disallow_latest_tag/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' disallow_latest_tag.yaml | kubectl create -f -
