best-practices/disallow_latest_tag/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-pod.yaml
  shouldFail: false
- file: bad-pod-latest-fail-first.yaml
  shouldFail: true
- file: bad-pod-latest-success-first.yaml
  shouldFail: true
- file: bad-pod-no-tag.yaml
  shouldFail: true
